deployment/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: postgres
          image: postgres:14.5-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: keycloak-postgres-volume
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: keycloak-postgres-volume
          persistentVolumeClaim:
            claimName: keycloak-postgres-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: bitnamilegacy/keycloak:24.0.5
          ports:
            - containerPort: 18080
              name: http
#            - containerPort: 8443
#              name: https
          volumeMounts:
            - name: tls-secret
              mountPath: /opt/bitnami/keycloak/certs
              readOnly: true
          readinessProbe:
            httpGet:
              path: '/auth/realms/master'
              port: 18080
            initialDelaySeconds: 90
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: '/auth/realms/master'
              port: 18080
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
      volumes:
        - name: tls-secret
          secret:
            secretName: keycloak-tls
