deployment/keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  labels:
    app: keycloak
spec:
  ports:
    - port: 5432
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.127.20
  ports:
    - name: http
      port: 18080        # внешний порт
      targetPort: 18080  # внутренний порт контейнера Keycloak
    - name: https
      port: 8443        # внешний порт
      targetPort: 8443  # внутренний порт контейнера Keycloak
  selector:
    app: keycloak
#  externalIPs:
#    - 192.168.1.178
